# WindWhisper

./: README.md  pyproject.toml  record_voice.py  transcription_tool.py
sounds/: end_recording.m4a  start_recording.m4a
